--- a/pages/1788.html
+++ b/pages/1788.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,55 +308,53 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_50ef50a346e00c31f1f85d4eebcdd5c65c65aac2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ε</mi><mo>,</mo><mi>ϵ</mi></mrow><annotation encoding='application/x-tex'>
+    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_dd60abb4dfe06c10cd01edde2a831419a7562132_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ε</mi><mo>,</mo><mi>ϵ</mi></mrow><annotation encoding='application/x-tex'>
   \varepsilon, \epsilon
 
 </annotation></semantics></math></div>
 <p>linear observables</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_50ef50a346e00c31f1f85d4eebcdd5c65c65aac2_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mstyle mathvariant='bold'><mi>A</mi></mstyle> <mi>μ</mi></msub><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
-  \mathbf{A}_\mu(x)
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_dd60abb4dfe06c10cd01edde2a831419a7562132_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>e</mi> <mi>μ</mi></msup><msub><mstyle mathvariant='bold'><mi>A</mi></mstyle> <mi>μ</mi></msub><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+  e^\mu \mathbf{A}_\mu(x)
 
 </annotation></semantics></math></div>
 <p>Fourier transform</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_50ef50a346e00c31f1f85d4eebcdd5c65c65aac2_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mover><mstyle mathvariant='bold'><mi>A</mi></mstyle><mo>^</mo></mover> <mi>μ</mi></msub><mo stretchy='false'>(</mo><mi>k</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
-  \widehat{\mathbf{A}}_\mu(k)
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_dd60abb4dfe06c10cd01edde2a831419a7562132_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>e</mi> <mi>μ</mi></msup><msub><mover><mstyle mathvariant='bold'><mi>A</mi></mstyle><mo>^</mo></mover> <mi>μ</mi></msub><mo stretchy='false'>(</mo><mi>k</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+  e^\mu \widehat{\mathbf{A}}_\mu(k)
 
 </annotation></semantics></math></div>
 <p>BRST differential</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_50ef50a346e00c31f1f85d4eebcdd5c65c65aac2_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>s</mi> <mi>BRST</mi></msub><mover><mstyle mathvariant='bold'><mi>C</mi></mstyle><mo>¯</mo></mover><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>=</mo><msub><mo>∂</mo> <mi>μ</mi></msub><msup><mstyle mathvariant='bold'><mi>A</mi></mstyle> <mi>μ</mi></msup><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
-  s_{BRST} \overline{\mathbf{C}}(x)
-  =
-  \partial_\mu \mathbf{A}^\mu(x)
-
-</annotation></semantics></math></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_50ef50a346e00c31f1f85d4eebcdd5c65c65aac2_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>s</mi> <mi>BRST</mi></msub><mover><mover><mstyle mathvariant='bold'><mi>C</mi></mstyle><mo>¯</mo></mover><mo>^</mo></mover><mo stretchy='false'>(</mo><mi>k</mi><mo stretchy='false'>)</mo><mo>=</mo><msup><mi>k</mi> <mi>μ</mi></msup><msub><mover><mstyle mathvariant='bold'><mi>A</mi></mstyle><mo>^</mo></mover> <mi>μ</mi></msub><mo stretchy='false'>(</mo><mi>k</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_dd60abb4dfe06c10cd01edde2a831419a7562132_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>s</mi> <mi>BRST</mi></msub><mover><mover><mstyle mathvariant='bold'><mi>C</mi></mstyle><mo>¯</mo></mover><mo>^</mo></mover><mo stretchy='false'>(</mo><mi>k</mi><mo stretchy='false'>)</mo><mo>=</mo><msup><mi>k</mi> <mi>μ</mi></msup><msub><mover><mstyle mathvariant='bold'><mi>A</mi></mstyle><mo>^</mo></mover> <mi>μ</mi></msub><mo stretchy='false'>(</mo><mi>k</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
   s_{BRST} \widehat{\overline{\mathbf{C}}}(k)
     =
   k^\mu \widehat{\mathbf{A}}_\mu(k)
 
 </annotation></semantics></math></div>
 <p>and</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_50ef50a346e00c31f1f85d4eebcdd5c65c65aac2_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>s</mi> <mi>BRST</mi></msub><msup><mi>e</mi> <mi>μ</mi></msup><msub><mstyle mathvariant='bold'><mi>A</mi></mstyle> <mi>μ</mi></msub><mo stretchy='false'>(</mo><mi>k</mi><mo stretchy='false'>)</mo><mo>=</mo><msup><mi>e</mi> <mi>μ</mi></msup><msub><mi>k</mi> <mi>μ</mi></msub><mstyle mathvariant='bold'><mi>C</mi></mstyle><mo stretchy='false'>(</mo><mi>k</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_dd60abb4dfe06c10cd01edde2a831419a7562132_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>s</mi> <mi>BRST</mi></msub><mrow><mo>(</mo><msup><mi>e</mi> <mi>μ</mi></msup><msub><mstyle mathvariant='bold'><mi>A</mi></mstyle> <mi>μ</mi></msub><mo stretchy='false'>(</mo><mi>k</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow><mo>=</mo><mrow><mo>(</mo><msup><mi>e</mi> <mi>μ</mi></msup><msub><mi>k</mi> <mi>μ</mi></msub><mo>)</mo></mrow><mstyle mathvariant='bold'><mi>C</mi></mstyle><mo stretchy='false'>(</mo><mi>k</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
   s_{BRST}
-  e^\mu \mathbf{A}_\mu(k)
+  \left(
+    e^\mu \mathbf{A}_\mu(k)
+  \right)
   =
-  e^\mu k_\mu \mathbf{C}(k)
+  \left(e^\mu k_\mu\right) \mathbf{C}(k)
 
 </annotation></semantics></math></div>
-<p>this means</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_50ef50a346e00c31f1f85d4eebcdd5c65c65aac2_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mo>[</mo><msub><mover><mstyle mathvariant='bold'><mi>A</mi></mstyle><mo>^</mo></mover> <mn>0</mn></msub><mo stretchy='false'>(</mo><mi>κ</mi><mo>,</mo><mn>0</mn><mo>,</mo><mi>⋯</mi><mo>,</mo><mn>0</mn><mo>,</mo><mi>κ</mi><mo stretchy='false'>)</mo><mo>−</mo><msub><mover><mstyle mathvariant='bold'><mi>A</mi></mstyle><mo>^</mo></mover> <mi>p</mi></msub><mo stretchy='false'>(</mo><mi>κ</mi><mo>,</mo><mn>0</mn><mo>,</mo><mi>⋯</mi><mo>,</mo><mn>0</mn><mo>,</mo><mi>κ</mi><mo stretchy='false'>)</mo><mo>]</mo></mrow><mo>=</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>
-  \left[
-  \widehat{\mathbf{A}}_0(\kappa,0, \cdots, 0 ,\kappa)
-  -
-  \widehat{ \mathbf{A}}_p(\kappa, 0 , \cdots, 0 , \kappa)
-  \right]
-  = 0
+<p>this means physical polarization is</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_dd60abb4dfe06c10cd01edde2a831419a7562132_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mfrac><mrow><mo>{</mo><msup><mi>e</mi> <mi>μ</mi></msup><mo stretchy='false'>|</mo><msup><mi>e</mi> <mi>μ</mi></msup><msub><mi>k</mi> <mi>μ</mi></msub><mo>=</mo><mn>0</mn><mo>}</mo></mrow><mrow><mo>{</mo><msup><mi>e</mi> <mi>μ</mi></msup><mo stretchy='false'>|</mo><msup><mi>e</mi> <mi>μ</mi></msup><mo>∝</mo><msup><mi>k</mi> <mi>μ</mi></msup><mo>}</mo></mrow></mfrac></mrow><annotation encoding='application/x-tex'>
+  \frac{
+    \left\{
+      e^\mu \vert e^\mu k_\mu = 0
+    \right\}
+  }
+  {
+    \left\{ e^\mu \vert e^\mu \propto k^\mu\right\}
+  }
 
 </annotation></semantics></math></div>
-<p>and</p>
 </div>
 
 <div class="revisedby">
-  Revised on December 15, 2017 17:58:12 
+  Revised on December 15, 2017 18:07:58 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.8)
 </div>
