--- a/pages/17668.html
+++ b/pages/17668.html
@@ -326,6 +326,10 @@ margin-left: 0em;
 <li id='Kim2'>
 <p>Hee-Joong Chung, Dohyeong Kim, <a class='existingWikiWord' href='/nlab/show/Minhyong+Kim'>Minhyong Kim</a>, Jeehoon Park, Hwajong Yoo, <em>Arithmetic Chern-Simons Theory II</em>, (<a href='http://arxiv.org/abs/1609.03012'>arXiv:1609.03012</a>)</p>
 </li>
+
+<li>
+<p>Frauke M. Bleher, Ted Chinburg, Ralph Greenberg, Mahesh Kakde, George Pappas, Martin J. Taylor, <em>Unramified arithmetic Chern-Simons invariants</em>, (arXiv:1705.07110rithmetic Chern-Simons invariants))</p>
+</li>
 </ul>
 
 <p>For an introductory talk see</p>
@@ -336,14 +340,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December 17, 2017 05:35:33 
+  Revised on December 17, 2017 15:52:25 
   by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
   (217.39.117.135)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/arithmetic+Chern-Simons+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/arithmetic+Chern-Simons+theory/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/arithmetic+Chern-Simons+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/arithmetic+Chern-Simons+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/arithmetic+Chern-Simons+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/arithmetic+Chern-Simons+theory/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/arithmetic+Chern-Simons+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/arithmetic+Chern-Simons+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
