--- a/pages/6321.html
+++ b/pages/6321.html
@@ -903,9 +903,37 @@ margin-left: 0em;
 
 <h2 id='concepts'>Concepts</h2>
 
+<p><strong><a class='existingWikiWord' href='/nlab/show/field+theory'>field theory</a></strong>: <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical</a>, <a class='existingWikiWord' href='/nlab/show/prequantum+field+theory'>pre-quantum</a>, <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum</a></p>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a></strong></p>
+
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a>, <a class='existingWikiWord' href='/nlab/show/subsystem'>subsystem</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+form'>Euler-Lagrange form</a>, <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/locally+variational+field+theory'>locally variational field theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/subsystem'>subsystem</a></p>
 </li>
 
 <li>
@@ -943,7 +971,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/state+on+an+operator+algebra'>quantum states</a>,</p>
+<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>quantum states</a>,</p>
 
 <ul>
 <li>
@@ -1099,7 +1127,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#original_articles'>Original articles</a></li><li><a href='#texbooks'>Texbooks</a></li></ul></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#original_articles'>Original articles</a></li><li><a href='#review'>Review</a></li><li><a href='#phenomenology'>Phenomenology</a></li></ul></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p><em>Quantum electrodynamics</em> (“QED”) is the <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> of <a class='existingWikiWord' href='/nlab/show/electromagnetism'>electromagnetism</a>: it describes the <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum theory</a> of <a class='existingWikiWord' href='/nlab/show/photon'>photons</a> and <a class='existingWikiWord' href='/nlab/show/electron'>electrons</a>.</p>
@@ -1156,20 +1184,6 @@ margin-left: 0em;
 
 <p>and (<a href='#Scharf95'>Scharf 95, section 0.0</a>).</p>
 
-<h3 id='texbooks'>Texbooks</h3>
-
-<p>A decent textbook discussion of the standard lore is in</p>
-
-<ul>
-<li id='Zeidler'><a class='existingWikiWord' href='/nlab/show/Eberhard+Zeidler'>Eberhard Zeidler</a>, <em>Quantum field theory II: Quantum electrodynamics – A bridge between mathematicians and physicists</em>, Springer (2009)</li>
-</ul>
-
-<p>Mathematically rigorous discussion in <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a> is in</p>
-
-<ul>
-<li id='Scharf95'><a class='existingWikiWord' href='/nlab/show/G%C3%BCnter+Scharf'>Günter Scharf</a>, <em><a class='existingWikiWord' href='/nlab/show/Finite+Quantum+Electrodynamics+--+The+Causal+Approach'>Finite Quantum Electrodynamics -- The Causal Approach</a></em>, Berlin: Springer-Verlag, 1995, 2nd edition</li>
-</ul>
-
 <p>A construction of QED in the context of <a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>pertubative AQFT</a> is discussed in</p>
 
 <ul>
@@ -1188,6 +1202,28 @@ margin-left: 0em;
 <li id='Duch17'><a class='existingWikiWord' href='/nlab/show/Pawe%C5%82+Duch'>Paweł Duch</a>, <em>Massless fields and adiabatic limit in quantum field theory</em> (<a href='https://arxiv.org/abs/1709.09907'>arXiv:1709.09907</a>)</li>
 </ul>
 
+<h3 id='review'>Review</h3>
+
+<p>Traditional discussion includes</p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Radovan+Dermisek'>Radovan Dermisek</a>, <em>Quantum Electrodynamics (QED)</em> (<a href='http://www.physics.indiana.edu/~dermisek/QFT_09/qft-II-5-4p.pdf'>pdf</a>, <a class='existingWikiWord' href='/nlab/files/DermisekQED.pdf' title='pdf'>pdf</a>)</p>
+</li>
+
+<li id='Zeidler'>
+<p><a class='existingWikiWord' href='/nlab/show/Eberhard+Zeidler'>Eberhard Zeidler</a>, <em>Quantum field theory II: Quantum electrodynamics – A bridge between mathematicians and physicists</em>, Springer (2009)</p>
+</li>
+</ul>
+
+<p>Mathematically rigorous discussion in <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a> is in</p>
+
+<ul>
+<li id='Scharf95'><a class='existingWikiWord' href='/nlab/show/G%C3%BCnter+Scharf'>Günter Scharf</a>, <em><a class='existingWikiWord' href='/nlab/show/Finite+Quantum+Electrodynamics+--+The+Causal+Approach'>Finite Quantum Electrodynamics -- The Causal Approach</a></em>, Berlin: Springer-Verlag, 1995, 2nd edition</li>
+</ul>
+
+<h3 id='phenomenology'>Phenomenology</h3>
+
 <p>Comparison to <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> is reviewed in</p>
 
 <ul>
@@ -1201,14 +1237,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 19, 2017 10:50:03 
+  Revised on December 17, 2017 15:45:24 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (192.76.172.80)
+  (94.220.92.170)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quantum+electrodynamics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+electrodynamics/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/quantum+electrodynamics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+electrodynamics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quantum+electrodynamics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+electrodynamics/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/quantum+electrodynamics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+electrodynamics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
