--- a/pages/17668.html
+++ b/pages/17668.html
@@ -335,19 +335,19 @@ margin-left: 0em;
 <p>For an introductory talk see</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Minhyong+Kim'>Minhyong Kim</a>, <em>Arithmetic topological quantum field theory?</em>, (<a>slides</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Minhyong+Kim'>Minhyong Kim</a>, <em>Arithmetic topological quantum field theory?</em>, (<a href='https://simonsfoundation.s3.amazonaws.com/share/mps/conferences/2017_Conference_on_Number_Theory_Geometry_Moonshine_and_Strings/Kim.pdf'>slides</a>)</li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Revised on December 17, 2017 15:52:25 
+  Revised on December 17, 2017 17:43:41 
   by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
   (217.39.117.135)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/arithmetic+Chern-Simons+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/arithmetic+Chern-Simons+theory/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/arithmetic+Chern-Simons+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/arithmetic+Chern-Simons+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/arithmetic+Chern-Simons+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/arithmetic+Chern-Simons+theory/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/arithmetic+Chern-Simons+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/arithmetic+Chern-Simons+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
