--- a/pages/6042.html
+++ b/pages/6042.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -914,6 +914,14 @@ margin-left: 0em;
 
 <h2 id='references'>References</h2>
 
+<p>Named after <a class='existingWikiWord' href='/nlab/show/Hendrik+Lorentz'>Hendrik Lorentz</a>.</p>
+
+<p>See also</p>
+
+<ul>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Lorentz_force'>Lorentz force</a></em></li>
+</ul>
+
 <p>The generalization to the <a class='existingWikiWord' href='/nlab/show/spinning+particle'>spinning particle</a> is discussed for instance in</p>
 
 <ul>
@@ -937,14 +945,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 19, 2017 08:37:21 
+  Revised on December 18, 2017 00:37:44 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (192.76.172.80)
+  (94.220.92.170)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Lorentz+force" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Lorentz+force/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Lorentz+force" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Lorentz+force" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Lorentz+force" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Lorentz+force/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Lorentz+force" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Lorentz+force" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
