--- a/pages/18677.html
+++ b/pages/18677.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -902,9 +902,9 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>For <a class='existingWikiWord' href='/nlab/show/electromagnetism'>electromagnetism</a> the <em>Lorenz gauge condition</em> is one possible <a class='existingWikiWord' href='/nlab/show/gauge+fixing'>gauge fixing</a> condition: It requests that the <a class='existingWikiWord' href='/nlab/show/divergence'>divergence</a> of the <a class='existingWikiWord' href='/nlab/show/gauge+potential'>gauge potential</a> <math class='maruku-mathml' display='inline' id='mathml_00d4a89f6e77f9efa4df8b6e939ecd5a7943f212_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/cotangent+bundle'>differential 1-form</a> vanishes: <math class='maruku-mathml' display='inline' id='mathml_00d4a89f6e77f9efa4df8b6e939ecd5a7943f212_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi><mo>⋆</mo><mi>A</mi><mo>=</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>d \star A = 0</annotation></semantics></math>.</p>
+<p>For <a class='existingWikiWord' href='/nlab/show/electromagnetism'>electromagnetism</a> the <em>Lorenz gauge condition</em> is one possible <a class='existingWikiWord' href='/nlab/show/gauge+fixing'>gauge fixing</a> condition: It requests that the <a class='existingWikiWord' href='/nlab/show/divergence'>divergence</a> of the <a class='existingWikiWord' href='/nlab/show/gauge+potential'>gauge potential</a> <math class='maruku-mathml' display='inline' id='mathml_f3ac920141c4368468e42f10975f035be4464474_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/cotangent+bundle'>differential 1-form</a> vanishes: <math class='maruku-mathml' display='inline' id='mathml_f3ac920141c4368468e42f10975f035be4464474_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi><mo>⋆</mo><mi>A</mi><mo>=</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>d \star A = 0</annotation></semantics></math>.</p>
 
-<p>On <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski spacetime</a> in standard <a class='existingWikiWord' href='/nlab/show/coordinate+system'>coordinates</a> this is the condition <math class='maruku-mathml' display='inline' id='mathml_00d4a89f6e77f9efa4df8b6e939ecd5a7943f212_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>∂</mo> <mi>μ</mi></msub><msup><mi>A</mi> <mi>μ</mi></msup><mo>=</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>\partial_\mu A^\mu = 0</annotation></semantics></math> (using <a class='existingWikiWord' href='/nlab/show/Einstein+summation+convention'>Einstein summation convention</a>).</p>
+<p>On <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski spacetime</a> in standard <a class='existingWikiWord' href='/nlab/show/coordinate+system'>coordinates</a> this is the condition <math class='maruku-mathml' display='inline' id='mathml_f3ac920141c4368468e42f10975f035be4464474_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>∂</mo> <mi>μ</mi></msub><msup><mi>A</mi> <mi>μ</mi></msup><mo>=</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>\partial_\mu A^\mu = 0</annotation></semantics></math> (using <a class='existingWikiWord' href='/nlab/show/Einstein+summation+convention'>Einstein summation convention</a>).</p>
 
 <p>In <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST formalism</a> this gauge (and its variants) is implement by introducing the auxiliary “<a class='existingWikiWord' href='/nlab/show/Nakanishi-Lautrup+field'>Nakanishi-Lautrup field</a>” together with its “<a class='existingWikiWord' href='/nlab/show/anti-ghost+field'>antighost field</a>”, see at <em><a class='existingWikiWord' href='/nlab/show/quantization+of+Yang-Mills+theory'>quantization of Yang-Mills theory</a></em>.</p>
 
@@ -918,17 +918,20 @@ margin-left: 0em;
 
 <p>
 </p>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on December 18, 2017 00:30:39 
+  Revised on December 18, 2017 04:53:27 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.92.170)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Lorenz+gauge" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Lorenz+gauge/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Lorenz+gauge" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Lorenz+gauge" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Lorenz+gauge" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Lorenz+gauge/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Lorenz+gauge" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Lorenz+gauge" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
