--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,7 +308,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>a representable profunctor <math class='maruku-mathml' display='inline' id='mathml_2a5d81a3d7e4bd1940f0ca3ac09dc28a394b66ea_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi><mo stretchy='false'>(</mo><mo>⊗</mo><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>:</mo><mi>𝒞</mi><mo>→</mo><mi>𝒞</mi><mo>⊗</mo><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}(\otimes,1): \mathcal{C} \to \mathcal{C}\otimes \mathcal{C}</annotation></semantics></math>.</p>
+    <p>a representable profunctor <math class='maruku-mathml' display='inline' id='mathml_f393fc1a61cf058a16de0dfce49b0424223f1a32_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi><mo stretchy='false'>(</mo><mo>⊗</mo><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>:</mo><mi>𝒞</mi><mi>⇸</mi><mi>𝒞</mi><mo>⊗</mo><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}(\otimes,1): \mathcal{C} &amp;#8696; \mathcal{C}\otimes \mathcal{C}</annotation></semantics></math>.</p>
 <table><thead><tr><th><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a></th><th><a class='existingWikiWord' href='/nlab/show/Poisson+manifold'>Poisson bracket</a></th><th><a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a></th><th><a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard propagator</a></th><th><a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a></th></tr></thead><tbody><tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/scalar+field'>real scalar field</a></td><td style='text-align: left;'>expl. \ref{PeierlsBracketEistsForScalarFieldAndDiracField}, <br/> expl. \ref{PoissonBracketForRealScalarField}</td><td style='text-align: left;'>prop. \ref{ModeExpansionOfCausalPropagatorForKleinGordonOnMinkowski}</td><td style='text-align: left;'>def. \ref{StandardHadamardDistributionOnMinkowskiSpacetime}</td><td style='text-align: left;'>def. \ref{FeynmanPropagatorForKleinGordonEquationOnMinkowskiSpacetime}</td></tr>
 <tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac field</a></td><td style='text-align: left;'>expl. \ref{PeierlsBracketEistsForScalarFieldAndDiracField}, <br/> expl. \ref{PoissonBracketForDiracField}</td><td style='text-align: left;'>prop. \ref{DiracEquationOnMinkowskiSpacetimeAdvancedAndRetardedPropagators}</td><td style='text-align: left;'>def. \ref{HadamardPropagatorForDiracOperatorOnMinkowskiSpacetime}</td><td style='text-align: left;'>def. \ref{FeynmanPropagatorForDiracOperatorOnMinkowskiSpacetime}</td></tr>
 <tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a></td><td style='text-align: left;'></td><td style='text-align: left;'>prop. \ref{PhotonPropagatorInGaussianAveragedLorenzGauge}</td><td style='text-align: left;'></td><td style='text-align: left;'>prop. \ref{PhotonPropagatorInGaussianAveragedLorenzGauge}</td></tr>
@@ -316,14 +316,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December 18, 2017 19:54:28 
+  Revised on December 18, 2017 20:35:44 
   by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
   (37.235.48.135)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1367" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1367 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1368" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1368 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
