--- a/pages/3949.html
+++ b/pages/3949.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -314,9 +314,35 @@ margin-left: 0em;
 <li><a href='http://maths.lancs.ac.uk/~choiy1/'>website</a></li>
 </ul>
 
+<p>(Last properly active in 2014, but might be returning in 2018…)</p>
+
 <h3 id='to_do_list'>To do list</h3>
 
-<p>Some things I am considering trying to write about, or contribute to. (This is mainly meant as a list to remind or nag me to write things down.) * <a class='existingWikiWord' href='/nlab/show/projective+Banach+space'>projective, injective and flat Banach spaces</a> (both in the metric and topological categories of <a class='existingWikiWord' href='/nlab/show/Banach+space'>Banach space</a>s) * RKHS * the bidualization monad on <a class='existingWikiWord' href='/nlab/show/Banach+space'>Banach space</a>s * Kaijser and Wick-Pelletier’s work on interpolation * Arens-Eells spaces, a.k.a. the adjunction between Banach spaces and metric spaces. * Richard Arens’s paper using “phyla”, or: where Banach algebras and <a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+category'>symmetric monoidal categories</a> should have met. (There is now some stuff on <a class='existingWikiWord' href='/nlab/show/Banach+algebra#Arens products'>Arens products</a> on the <a class='existingWikiWord' href='/nlab/show/Banach+algebra'>Banach algebras</a> page.) * Categori(c)al basics of operator spaces: MAX, MIN, and various tensor products * functorial aspects of the group von Neumann algebra construction * cabbages * kings * whether pigs have wings</p>
+<p>Some things I am considering trying to write about, or contribute to. (This is mainly meant as a list to remind or nag me to write things down.)</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/projective+Banach+space'>projective, injective and flat Banach spaces</a> (both in the metric and topological categories of <a class='existingWikiWord' href='/nlab/show/Banach+space'>Banach space</a>s)</li>
+
+<li>RKHS</li>
+
+<li>the bidualization monad on <a class='existingWikiWord' href='/nlab/show/Banach+space'>Banach space</a>s</li>
+
+<li>Kaijser and Wick-Pelletier’s work on interpolation</li>
+
+<li>Arens-Eells spaces, a.k.a. the adjunction between Banach spaces and metric spaces.</li>
+
+<li>Richard Arens’s paper using “phyla”, or: where Banach algebras and <a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+category'>symmetric monoidal categories</a> should have met. (There is now some stuff on <a class='existingWikiWord' href='/nlab/show/Banach+algebra#Arens products'>Arens products</a> on the <a class='existingWikiWord' href='/nlab/show/Banach+algebra'>Banach algebras</a> page.)</li>
+
+<li>Categori(c)al basics of operator spaces: MAX, MIN, and various tensor products</li>
+
+<li>functorial aspects of the group von Neumann algebra construction</li>
+
+<li>cabbages</li>
+
+<li>kings</li>
+
+<li>whether pigs have wings</li>
+</ul>
 
 <h3 id='a_survey_paper_which_is_more_rewarding_than_this_page'>A survey paper which is more rewarding than this page</h3>
 
@@ -331,14 +357,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 15, 2014 15:19:56 
+  Revised on December 18, 2017 22:04:39 
   by <a class="existingWikiWord" href="/nlab/show/Yemon+Choi">Yemon Choi</a>
   (82.69.94.217)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Yemon+Choi" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Yemon+Choi/26" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(26 revisions)</span> | <a href="/nlab/show/diff/Yemon+Choi" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Yemon+Choi" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Yemon+Choi" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Yemon+Choi/27" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(27 revisions)</span> | <a href="/nlab/show/diff/Yemon+Choi" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Yemon+Choi" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
