--- a/pages/18856.html
+++ b/pages/18856.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      David Olive in nLab
+      John Polkinghorne in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      David Olive
+      John Polkinghorne
   </h1>
 
 
@@ -309,45 +309,35 @@ margin-left: 0em;
 
 <div id="revision">
     <ul>
-<li><a href='http://en.wikipedia.org/wiki/David_Olive'>Wikipedia entry</a></li>
+<li><a href='https://en.wikipedia.org/wiki/John_Polkinghorne'>Wikipedia entry</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_ffdcaa998a2aef3a02e3daf4661cc1468141fe95_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_1f4a2d86e851d35787285ece712c8ab06c5fabe4_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/S-duality'>Montonen-Olive duality</a> (<a class='existingWikiWord' href='/nlab/show/S-duality'>S-duality</a>)</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/BPS+state'>BPS state</a></p>
-</li>
+<li><a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a></li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on December 19, 2017 07:12:08 
+  Created on December 19, 2017 07:20:26 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/David+Olive" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/David+Olive/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/David+Olive" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/David+Olive" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/John+Polkinghorne" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/David+Olive" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/John+Polkinghorne" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/David+Olive" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/John+Polkinghorne" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/David+Olive" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/John+Polkinghorne" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
