--- a/pages/1788.html
+++ b/pages/1788.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,105 +308,27 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='num_example'>
-<h6 id='remark'>Remark</h6>
+    <p>can nLab/nForum use <code>&lt;object&gt;</code> with html data? See <a href='https://golem.ph.utexas.edu/category/2017/12/sagemath_and_3d_models_in_webp.html'>nCafe: /sagemath_and_3d_models_in_webp.htm</a> which includes <a href='https://golem.ph.utexas.edu/category/files/catenoid.html'>https://golem.ph.utexas.edu/category/files/catenoid.html</a>.</p>
 
-<p>If the argument functions <math class='maruku-mathml' display='inline' id='mathml_55553e8f1f3f3a03ae0792b0c0877ff477bf6a09_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>,</mo><mi>g</mi></mrow><annotation encoding='application/x-tex'>f,g</annotation></semantics></math> admit <a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier analysis</a> (are <a class='existingWikiWord' href='/nlab/show/rapidly+decreasing+function'>functions with rapidly decreasing partial derivatives</a>), then the <a class='existingWikiWord' href='/nlab/show/star+product'>star product</a> from def. \ref{StarPoduct} is equivalently given by the following <a class='existingWikiWord' href='/nlab/show/integral'>integral</a> expression:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_55553e8f1f3f3a03ae0792b0c0877ff477bf6a09_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><mrow><mo>(</mo><mi>f</mi><msub><mo>⋆</mo> <mi>ω</mi></msub><mi>g</mi><mo>)</mo></mrow><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mtd> <mtd><mo>=</mo><mfrac><mrow><mo stretchy='false'>(</mo><mi>det</mi><mo stretchy='false'>(</mo><mi>ω</mi><msup><mo stretchy='false'>)</mo> <mrow><mn>2</mn><mi>n</mi></mrow></msup><mo stretchy='false'>)</mo></mrow><mrow><mo stretchy='false'>(</mo><mn>2</mn><mi>π</mi><mi>ℏ</mi><msup><mo stretchy='false'>)</mo> <mrow><mn>2</mn><mi>n</mi></mrow></msup></mrow></mfrac><mo>∫</mo><msup><mi>e</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mstyle displaystyle='false'><mfrac><mn>1</mn><mrow><mi>i</mi><mi>ℏ</mi></mrow></mfrac></mstyle><mi>ω</mi><mo stretchy='false'>(</mo><mo stretchy='false'>(</mo><mi>x</mi><mo>−</mo><mover><mi>y</mi><mo stretchy='false'>˜</mo></mover><mo stretchy='false'>)</mo><mo>,</mo><mo stretchy='false'>(</mo><mi>x</mi><mo>−</mo><mi>y</mi><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mrow></msup><mi>f</mi><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo><mi>g</mi><mo stretchy='false'>(</mo><mover><mi>y</mi><mo stretchy='false'>˜</mo></mover><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mn>2</mn><mi>n</mi></mrow></msup><mi>y</mi><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mn>2</mn><mi>n</mi></mrow></msup><mover><mi>y</mi><mo stretchy='false'>˜</mo></mover></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
-  \begin{aligned}
-  \left(f \star_\omega g\right)(x)
-   &amp;= 
-  \frac{(det(\omega)^{2n})}{(2 \pi \hbar)^{2n} }
-  \int
-    e^{ - \tfrac{1}{i \hbar} \omega((x - \tilde y),(x-y))}
-    f(y)
-    g(\tilde y)
-   \,
-   d^{2 n} y
-   \,
-   d^{2 n} \tilde y
-  \end{aligned}
+<p><code>&lt;object xmlns=&quot;http://www.w3.org/1999/xhtml&quot; type=&quot;text/html&quot; data=&quot;https://golem.ph.utexas.edu/category/files/catenoid.html&quot; width=&quot;600&quot; height=&quot;400&quot;&gt;
+      &lt;param name=&quot;src&quot; value=&quot;/category/files/catenoid.html&quot; /&gt;
+      Your browser will not allow the embedded object!
+    &lt;/object&gt;</code></p>
 
-</annotation></semantics></math></div></div>
-
-<div class='proof'>
-<h6 id='proof'>Proof</h6>
-
-<p>We compute as follows:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_55553e8f1f3f3a03ae0792b0c0877ff477bf6a09_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><mrow><mo>(</mo><mi>f</mi><msub><mo>⋆</mo> <mi>ω</mi></msub><mi>g</mi><mo>)</mo></mrow><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mtd> <mtd><mo>≔</mo><mi>prod</mi><mo>∘</mo><mi>exp</mi><mrow><mo>(</mo><mi>ℏ</mi><msup><mi>ω</mi> <mrow><mi>i</mi><mi>j</mi></mrow></msup><mfrac><mo>∂</mo><mrow><mo>∂</mo><msup><mi>x</mi> <mi>i</mi></msup></mrow></mfrac><mo>⊗</mo><mfrac><mo>∂</mo><mrow><mo>∂</mo><msup><mi>x</mi> <mi>j</mi></msup></mrow></mfrac><mo>)</mo></mrow><mo stretchy='false'>(</mo><mi>f</mi><mo>,</mo><mi>g</mi><mo stretchy='false'>)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mfrac><mn>1</mn><mrow><mo stretchy='false'>(</mo><mn>2</mn><mi>π</mi><msup><mo stretchy='false'>)</mo> <mrow><mn>2</mn><mi>n</mi></mrow></msup></mrow></mfrac><mfrac><mn>1</mn><mrow><mo stretchy='false'>(</mo><mn>2</mn><mi>π</mi><msup><mo stretchy='false'>)</mo> <mrow><mn>2</mn><mi>n</mi></mrow></msup></mrow></mfrac><mo>∫</mo><mo>∫</mo><munder><mrow><msup><mi>e</mi> <mrow><mi>i</mi><mi>ℏ</mi><msup><mi>ω</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msup><mo stretchy='false'>(</mo><mi>k</mi><mo>,</mo><mi>q</mi><mo stretchy='false'>)</mo></mrow></msup></mrow><mo>⏟</mo></munder><munder><mrow><msup><mi>e</mi> <mrow><mi>i</mi><mi>k</mi><mo>⋅</mo><mo stretchy='false'>(</mo><mi>x</mi><mo>−</mo><mi>y</mi><mo stretchy='false'>)</mo></mrow></msup><mi>f</mi><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo></mrow><mo>⏟</mo></munder><munder><mrow><msup><mi>e</mi> <mrow><mi>i</mi><mi>q</mi><mo>⋅</mo><mo stretchy='false'>(</mo><mi>x</mi><mo>−</mo><mover><mi>y</mi><mo stretchy='false'>˜</mo></mover><mo stretchy='false'>)</mo></mrow></msup><mi>g</mi><mo stretchy='false'>(</mo><mover><mi>y</mi><mo stretchy='false'>˜</mo></mover><mo stretchy='false'>)</mo></mrow><mo>⏟</mo></munder><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mn>2</mn><mi>n</mi></mrow></msup><mi>k</mi><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mn>2</mn><mi>n</mi></mrow></msup><mi>q</mi><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mn>2</mn><mi>n</mi></mrow></msup><mi>y</mi><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mn>2</mn><mi>n</mi></mrow></msup><mover><mi>y</mi><mo stretchy='false'>˜</mo></mover></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mfrac><mn>1</mn><mrow><mo stretchy='false'>(</mo><mn>2</mn><mi>π</mi><msup><mo stretchy='false'>)</mo> <mrow><mn>2</mn><mi>n</mi></mrow></msup></mrow></mfrac><mo>∫</mo><mi>δ</mi><mrow><mo>(</mo><mi>x</mi><mo>−</mo><mover><mi>y</mi><mo stretchy='false'>˜</mo></mover><mo>+</mo><mi>ℏ</mi><msup><mi>ω</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msup><mo stretchy='false'>(</mo><mi>k</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow><msup><mi>e</mi> <mrow><mi>i</mi><mi>k</mi><mo>⋅</mo><mo stretchy='false'>(</mo><mi>x</mi><mo>−</mo><mi>y</mi><mo stretchy='false'>)</mo></mrow></msup><mi>f</mi><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo><mi>g</mi><mo stretchy='false'>(</mo><mover><mi>y</mi><mo stretchy='false'>˜</mo></mover><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mn>2</mn><mi>n</mi></mrow></msup><mi>k</mi><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mn>2</mn><mi>n</mi></mrow></msup><mi>y</mi><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mn>2</mn><mi>n</mi></mrow></msup><mover><mi>y</mi><mo stretchy='false'>˜</mo></mover></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mfrac><mrow><mo stretchy='false'>(</mo><mi>det</mi><mo stretchy='false'>(</mo><mi>ω</mi><msup><mo stretchy='false'>)</mo> <mrow><mn>2</mn><mi>n</mi></mrow></msup><mo stretchy='false'>)</mo></mrow><mrow><mo stretchy='false'>(</mo><mn>2</mn><mi>π</mi><mi>ℏ</mi><msup><mo stretchy='false'>)</mo> <mrow><mn>2</mn><mi>n</mi></mrow></msup></mrow></mfrac><mo>∫</mo><msup><mi>e</mi> <mrow><mi>i</mi><mstyle displaystyle='false'><mfrac><mn>1</mn><mi>ℏ</mi></mfrac></mstyle><mi>ω</mi><mo stretchy='false'>(</mo><mo stretchy='false'>(</mo><mi>x</mi><mo>−</mo><mover><mi>y</mi><mo stretchy='false'>˜</mo></mover><mo stretchy='false'>)</mo><mo>,</mo><mo stretchy='false'>(</mo><mi>x</mi><mo>−</mo><mi>y</mi><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mrow></msup><mi>f</mi><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo><mi>g</mi><mo stretchy='false'>(</mo><mover><mi>y</mi><mo stretchy='false'>˜</mo></mover><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mn>2</mn><mi>n</mi></mrow></msup><mi>y</mi><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mn>2</mn><mi>n</mi></mrow></msup><mover><mi>y</mi><mo stretchy='false'>˜</mo></mover></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
-  \begin{aligned}
-  \left(f \star_\omega g\right)(x)
-  &amp; \coloneqq
-  prod 
-    \circ \exp\left(
-       \hbar \omega^{i j} \frac{\partial}{\partial x^i} \otimes \frac{\partial}{\partial x^j}
-  \right)(f, g)
-  \\
-  &amp; =
-  \frac{1}{(2 \pi)^{2n}}
-  \frac{1}{(2 \pi)^{2n}}
-  \int
-  \int
-    \underbrace{
-      e^{ i \hbar \omega^{-1}(k,q) }
-    }
-    \underbrace{
-      e^{i k \cdot (x-y)}
-      f(y)
-    }
-    \underbrace{
-      e^{i q \cdot (x- \tilde y)}
-      g(\tilde y)
-    }
-   \,
-   d^{2 n} k
-   \,
-   d^{2 n} q
-   \,
-   d^{2 n} y
-   \,
-   d^{2 n} \tilde y
-   \\
-   &amp; =
-  \frac{1}{(2 \pi)^{2n}}
-  \int
-    \delta\left( x - \tilde y + \hbar \omega^{-1}(k) \right)
-    e^{i k \cdot (x-y)}
-    f(y)
-    g(\tilde y)
-   \,
-   d^{2 n} k
-   \,
-   d^{2 n} y
-   \,
-   d^{2 n} \tilde y
-  \\
-  &amp; = 
-  \frac{(det(\omega)^{2n})}{(2 \pi \hbar)^{2n} }
-  \int
-    e^{i \tfrac{1}{\hbar}\omega((x - \tilde y),(x-y))}
-    f(y)
-    g(\tilde y)
-   \,
-   d^{2 n} y
-   \,
-   d^{2 n} \tilde y
-  \end{aligned}
-
-</annotation></semantics></math></div>
-<p>Here in the first step we expressed <math class='maruku-mathml' display='inline' id='mathml_55553e8f1f3f3a03ae0792b0c0877ff477bf6a09_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi></mrow><annotation encoding='application/x-tex'>f</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_55553e8f1f3f3a03ae0792b0c0877ff477bf6a09_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi></mrow><annotation encoding='application/x-tex'>g</annotation></semantics></math> both by their <a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier transform</a> (inserting the Fourier expression of the <a class='existingWikiWord' href='/nlab/show/Dirac+distribution'>delta distribution</a> from <a href='Dirac+distribution#FourierTransformOfDeltaDistribution'>this example</a>) and used that under this transformation the <a class='existingWikiWord' href='/nlab/show/partial+differentiation'>partial derivative</a> <math class='maruku-mathml' display='inline' id='mathml_55553e8f1f3f3a03ae0792b0c0877ff477bf6a09_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ω</mi> <mrow><mi>a</mi><mi>b</mi></mrow></msup><mfrac><mo>∂</mo><mrow><mo>∂</mo><msup><mi>ϕ</mi> <mi>a</mi></msup></mrow></mfrac><mfrac><mo>∂</mo><mrow><msup><mi>ϕ</mi> <mi>b</mi></msup></mrow></mfrac></mrow><annotation encoding='application/x-tex'>\omega^{a b} \frac{\partial}{\partial\phi^a}{\frac{\partial}{\phi^b}}</annotation></semantics></math> turns into the product with <math class='maruku-mathml' display='inline' id='mathml_55553e8f1f3f3a03ae0792b0c0877ff477bf6a09_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>i</mi><msup><mi>ω</mi> <mrow><mi>i</mi><mi>j</mi></mrow></msup><msub><mi>k</mi> <mi>i</mi></msub><msub><mi>k</mi> <mi>j</mi></msub></mrow><annotation encoding='application/x-tex'>i \omega^{i j} k_i k_j</annotation></semantics></math> (<a href='Fourier+transform#BasicPropertiesOfFourierTransformOverCartesianSpaces'>this prop.</a>). Then we identified again the Fourier-expansion of a <a class='existingWikiWord' href='/nlab/show/Dirac+distribution'>delta distribution</a> and finally we applied the <a class='existingWikiWord' href='/nlab/show/change+of+integration+variables'>change of integration variables</a> <math class='maruku-mathml' display='inline' id='mathml_55553e8f1f3f3a03ae0792b0c0877ff477bf6a09_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo>=</mo><mstyle displaystyle='false'><mfrac><mn>1</mn><mi>ℏ</mi></mfrac></mstyle><mi>ω</mi><mo stretchy='false'>(</mo><mi>z</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>k = \tfrac{1}{\hbar} \omega(z)</annotation></semantics></math> and evaluated the <a class='existingWikiWord' href='/nlab/show/Dirac+distribution'>delta distribution</a>.</p>
-</div>
+<p>raw object below.</p>
+&lt;object data='https://golem.ph.utexas.edu/category/files/catenoid.html' height='400' type='text/html' width='600' xmlns='http://www.w3.org/1999/xhtml'&gt;&lt;param name='src' value='/category/files/catenoid.html'/&gt;Your browser will not allow the embedded object!&lt;/object&gt;
+<p>This doesn’t work in nForum or nLab.</p>
 </div>
 
 <div class="revisedby">
-  Revised on December 19, 2017 13:23:06 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  Revised on December 19, 2017 14:36:57 
+  by <a class="existingWikiWord" href="/nlab/show/Rod+McGuire">Rod Mc Guire</a>
+  (108.39.133.109)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1370" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1370 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1371" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1371 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
